# filler

./: .gitignore  CMakeLists.txt  Makefile  README.md  check  denote_piece.c  filler.c  filler.mov  filler.trace  imelnych.filler  input.txt  oo.txt  text.txt  text1.txt
imelnych.filler.dSYM/Contents/: Info.plist
imelnych.filler.dSYM/Contents/Resources/DWARF/: imelnych.filler
includes/: filler.h
libft/: Makefile  ft_strsplit.c  ft_wordcount.c
libs/ft_printf/: Makefile  fill_type.c  ft_isdigitchar.c  ft_itoabase.c  ft_numlen.c  ft_numlenmax.c  ft_strlen.c  printflib.h
libs/libft/: Makefile  check_type.c  fill_type.c  ft_arrdel.c  ft_arrnew.c  ft_atoibase.c  ft_itoabase.c  ft_letters_length.c  ft_numlen_max.c  ft_printf.c  ft_strdel.c  ft_strjoin_free.c  ft_strnew.c  ft_strsplit.c  get_next_line.c  libft.h  libft.h.gch  print_address.c  print_digits.c  print_digits_unsigned.c  print_str.c  print_unichar.c  print_unicode.c  save_spec.c
maps/: map80
players/: ibohonos.filler  imelnych.filler
src/: a.out  denote_piece.c  filler.c  helper.c  map.c  move.c  piece.c  place_piece_algo.c  players.c  trim_save_piece.c  visual.c
